CloudFormation/ej4_01.yml
AWSTemplateFormatVersion: "2010-09-09"
Description: Stack con VPC + Subred Pública + IGW + EC2 (us-east-1)

Parameters:

  CrearEC2:
    Description: Determine si se creará o no una instancia EC2
    Type: String
    Default: Si
    AllowedValues:
      - Si
      - No

  Rules:
    Description: Elija el tipo de instancia
    Type: String
    Default: t3.micro
    AllowedValues:
      - t3.micro
      - t2.micro
      - t3.small

Conditions:
  CrearInstancia: !Equals [!Ref CrearEC2, Si]

Resources:

  MyVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: MyVPC

  PublicSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref MyVPC
      CidrBlock: 10.0.1.0/24
      MapPublicIpOnLaunch: true
      AvailabilityZone: us-east-1a
      Tags:
        - Key: Name
          Value: PublicSubnet

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: MyIGW

  AttachIGW:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref MyVPC
      InternetGatewayId: !Ref InternetGateway

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref MyVPC
      Tags:
        - Key: Name
          Value: PublicRouteTable

  PublicRoute:
    Type: AWS::EC2::Route
    DependsOn: AttachIGW
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  SubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet
      RouteTableId: !Ref PublicRouteTable

  InstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable SSH
      VpcId: !Ref MyVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: EC2SG

  EC2Instance:
    Type: AWS::EC2::Instance
    Condition: CrearInstancia
    Properties:
      InstanceType: !Ref Rules
      ImageId: ami-0ecb62995f68bb549
      SubnetId: !Ref PublicSubnet
      SecurityGroupIds:
        - !Ref InstanceSecurityGroup
      Tags:
        - Key: Name
          Value: !Join 
            - "-"
            - - !Ref "AWS::Region"
              - Alex-Chocano-perez
        - Key: VPCID
          Value: !GetAtt MyVPC.VpcId

Outputs:
  EC2PublicIP:
    Description: Dirección IP pública de la instancia EC2
    Value: !GetAtt EC2Instance.PublicIp
    Condition: CrearInstancia
