CloudFormation/ej4_02.yml
AWSTemplateFormatVersion: "2010-09-09"
Description: Stack con VPC + Subred Pública + Subred Privada + IGW + NAT Gateway + EC2

Parameters:
  IGW:
    Description: Determina si se asociara un Internet Gateway
    Type: String
    Default: true
    AllowedValues:
      - true
      - false

Conditions:
  UseIGW: !Equals [!Ref IGW, true]

Mappings:
  RegionMap:
    us-east-1:
      VPCCIDR: "10.0.0.0/20"
      PublicSubnetCIDR: "10.0.1.0/24"
      PrivateSubnetCIDR: "10.0.2.0/24"
      AMI: "ami-0ecb62995f68bb549"
    us-west-2:
      VPCCIDR: "172.16.0.0/20"
      PublicSubnetCIDR: "172.16.1.0/24"
      PrivateSubnetCIDR: "172.16.2.0/24"
      AMI: "ami-0786adace1541ca80"

Resources:

  MyVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !FindInMap
        - RegionMap
        - !Ref AWS::Region
        - VPCCIDR
      Tags:
        - Key: Name
          Value: MyVPC

  PublicSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref MyVPC
      CidrBlock: !FindInMap
        - RegionMap
        - !Ref AWS::Region
        - PublicSubnetCIDR
      MapPublicIpOnLaunch: true
      AvailabilityZone: !Select [0, !GetAZs ""]
      Tags:
        - Key: Name
          Value: PublicSubnet

  PrivateSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref MyVPC
      CidrBlock: !FindInMap
        - RegionMap
        - !Ref AWS::Region
        - PrivateSubnetCIDR
      MapPublicIpOnLaunch: false
      AvailabilityZone: !Select [0, !GetAZs ""]
      Tags:
        - Key: Name
          Value: PrivateSubnet

  InternetGateway:
    Condition: UseIGW
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: MyIGW

  AttachIGW:
    Condition: UseIGW
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref MyVPC
      InternetGatewayId: !Ref InternetGateway

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref MyVPC

  PublicRoute:
    Condition: UseIGW
    Type: AWS::EC2::Route
    DependsOn: AttachIGW
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet
      RouteTableId: !Ref PublicRouteTable

  PublicEIP:
    Condition: UseIGW
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc

  NATGateway:
    Condition: UseIGW
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt PublicEIP.AllocationId
      SubnetId: !Ref PublicSubnet

  PrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref MyVPC

  PrivateRoute:
    Condition: UseIGW
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NATGateway

  PrivateSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet
      RouteTableId: !Ref PrivateRouteTable

  InstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable SSH
      VpcId: !Ref MyVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0

  EC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t2.micro
      ImageId: !FindInMap
        - RegionMap
        - !Ref AWS::Region
        - AMI
      SubnetId: !Ref PublicSubnet
      SecurityGroupIds:
        - !Ref InstanceSecurityGroup
      Tags:
        - Key: Name
          Value: MyEC2

Outputs:
  EC2PublicIP:
    Description: IP pública de la EC2
    Value: !GetAtt EC2Instance.PublicIp
